HTML、VUE、VUE_SPRING代码处理（目录机构构建，处理指令执行未构建）